force-app/main/default/staticresources/python/Disappear/src/objects/ProductIndication__c.object
<CustomObject>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>EndDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Indication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Indication</label>
        <referenceTo>Indication__c</referenceTo>
        <relationshipLabel>Product Indications</relationshipLabel>
        <relationshipName>Product_Indications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>AmgenProduct__c</referenceTo>
        <relationshipLabel>Product Indications</relationshipLabel>
        <relationshipName>Product_Indications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SiebelRowId__c</fullName>
        <externalId>true</externalId>
        <label>SiebelRowId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Therapeutic_Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Therapeutic Area</label>
        <referenceTo>TherapeuticArea__c</referenceTo>
        <relationshipLabel>Product Indications</relationshipLabel>
        <relationshipName>Product_Indications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isEnbrel__c</fullName>
        <formula>Product__r.isEnbrel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isEnbrel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isLogicallyDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Indication</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Indication__c</columns>
        <columns>Therapeutic_Area__c</columns>
        <columns>isLogicallyDeleted__c</columns>
        <columns>isEnbrel__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ProductIndication Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Indications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>